--- a/project3_sprint1.ipynb
+++ b/project3_sprint1.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nutzer\\AppData\\Local\\Temp\\ipykernel_11248\\2044023505.py:8: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Nutzer\\AppData\\Local\\Temp\\ipykernel_10140\\2044023505.py:8: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('CBS_2021-2023_Full.csv')\n"
      ]
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "2 -77.038568  38.92087 -77.031691        member 2021-01-01  2021      1    1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
        "10693996        member 2023-12-31  2023     12   31  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
        "10693996        member 2023-12-31  2023     12   31    23      59      Sunday  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
        "(10693997, 20)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
        "member               147  136  30   6  11  12"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1524,7 @@
        "(10693997, 20)"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1575,6 +1575,28 @@
     "#    y axis metric to be adjusted\n",
     "plt.title('Bike Usage Distribution by Year & Month')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df4' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# check labels names in case of label naming standardization\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf4\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df4' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# check labels names in case of label naming standardization\n",
+    "df4.columns"
    ]
   }
  ],
