commit and push

--- a/project3_sprint1.ipynb
+++ b/project3_sprint1.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nutzer\\AppData\\Local\\Temp\\ipykernel_10140\\2044023505.py:8: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Nutzer\\AppData\\Local\\Temp\\ipykernel_16124\\2044023505.py:8: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('CBS_2021-2023_Full.csv')\n"
      ]
     }
@@ -1579,19 +1579,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df4' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# check labels names in case of label naming standardization\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf4\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df4' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['ride_id', 'rideable_type', 'started_at', 'ended_at',\n",
+       "       'start_station_name', 'start_station_id', 'end_station_name',\n",
+       "       'end_station_id', 'start_lat', 'start_lng', 'end_lat', 'end_lng',\n",
+       "       'member_casual', 'date', 'year', 'month', 'day', 'hour', 'minute',\n",
+       "       'day_of_week'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
